# OpenDock

./: .gitignore  LICENSE  OpenDock需求文档.md  README.md  app.js  index.html  package-lock.json  package.json  patch.txt  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml
_util/: migrate-from-jam-launcher.cjs
docs/: index.md  plugin-development.md  release-and-update.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/develop/: build-and-release.md  setup.md
docs/guide/: core-concepts.md  plugin-development.md  plugin-marketplace.md  quick-start.md  resources-and-open.md  webdav-sync.md
docs/reference/: commands.md  project-structure.md  site-deployment.md
openspec/changes/implement-tauri-vue-opendock/: design.md  proposal.md  tasks.md
plugins/: README.md  registry.ts
plugins/.system/theme-forest-mist/: plugin.json  plugin.ts
plugins/.system/theme-ink-blue/: plugin.json  plugin.ts
plugins/.system/webdav-sync/: plugin.json
plugins/external-demo/: plugin.json  plugin.ts
plugins/tool-type-demo/: plugin.json  plugin.ts
scripts/release/: release.ps1  sync_gitee_release.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/demo/projects/opendock-app/: package.json
src-tauri/demo/projects/opendock-server/: package.json
src-tauri/icons/: icon.icns
src-tauri/icons/logo-concepts/: preview.html
src-tauri/src/: app_icon_light_rgba.rs  app_icon_rgba.rs  lib.rs  main.rs
src-ui/: env.d.ts  index.html
src-ui/src/: App.vue  db.ts  dialog.ts  global.d.ts  helpers.ts  main.ts  pinyin.ts  seed.ts  storage.ts  store.ts  styles.css  syncDiff.ts  themes.ts  types.ts  webdavWorker.ts  webdavWorkerClient.ts
src-ui/src/__tests__/: reorder.test.ts  (+2 more)
(+37 files in other folders)
