[package]
name = "opendock"
version = "0.1.0"
description = "OpenDock desktop resource launcher"
authors = ["OpenDock"]
edition = "2021"

[lib]
name = "opendock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
windows-sys = { version = "0.61", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
