[package]
name = "opendock"
version = "0.1.13"
description = "OpenDock desktop resource launcher"
authors = ["OpenDock"]
edition = "2021"
[lib]
name = "opendock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-updater = "=2.10.1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
reqwest = { version = "0.13", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
